--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="auth-card">
-            <div class="card-header">
-                <h1>Tienda Supported</h1>
-            </div>
-            
-            <div id="auth-section">
+        <!-- Sección de autenticación -->
+        <div id="auth-section">
+            <div class="auth-card">
+                <div class="card-header">
+                    <h1>Tienda Supported</h1>
+                </div>
+                
                 <div id="login-form">
                     <h2>Iniciar Sesión</h2>
                     <form id="login">
@@ -53,12 +54,150 @@
             </div>
         </div>
 
-        <div id="products-section" style="display: none;">
-            <editable-list></editable-list>
+        <!-- Nueva sección de productos -->
+        <div id="products-section" class="products-section" style="display: none;">
+            <div class="header">
+                <h1>Gestión de Productos</h1>
+                <button id="logout-btn" class="btn btn-secondary">Cerrar Sesión</button>
+            </div>
+
+            <div class="filters-card">
+                <div class="search-bar">
+                    <input 
+                        type="text" 
+                        id="search-input" 
+                        placeholder="Buscar productos..."
+                        class="search-input"
+                    >
+                </div>
+                <div class="filters">
+                    <select id="sort-by" class="filter-select">
+                        <option value="">Ordenar por</option>
+                        <option value="name-asc">Nombre (A-Z)</option>
+                        <option value="name-desc">Nombre (Z-A)</option>
+                        <option value="price-asc">Precio (Menor a Mayor)</option>
+                        <option value="price-desc">Precio (Mayor a Menor)</option>
+                        <option value="stock-asc">Stock (Menor a Mayor)</option>
+                        <option value="stock-desc">Stock (Mayor a Menor)</option>
+                    </select>
+                    <select id="stock-filter" class="filter-select">
+                        <option value="">Filtrar por stock</option>
+                        <option value="in-stock">En stock</option>
+                        <option value="low-stock">Stock bajo</option>
+                        <option value="out-stock">Sin stock</option>
+                    </select>
+                </div>
+            </div>
+
+            <!-- Modificar el formulario de productos -->
+            <div class="product-form-card animate-in">
+                <div class="product-form-header">
+                    <h2>Agregar Producto</h2>
+                </div>
+                <form id="product-form">
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="name">Nombre</label>
+                            <input type="text" id="name" name="name" required minlength="3">
+                            <span class="error-message" data-for="name"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Descripción</label>
+                            <input type="text" id="description" name="description" required>
+                            <span class="error-message" data-for="description"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="price">Precio</label>
+                            <input type="number" id="price" name="price" step="0.01" min="0" required>
+                            <span class="error-message" data-for="price"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="stock">Stock</label>
+                            <input type="number" id="stock" name="stock" min="0" required>
+                            <span class="error-message" data-for="stock"></span>
+                        </div>
+                    </div>
+                    <div style="margin-top: 1.5rem;">
+                        <button type="submit" class="btn btn-primary">Agregar Producto</button>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Modificar la lista de productos -->
+            <div class="products-list-card animate-in">
+                <h2>Lista de Productos</h2>
+                <table class="products-table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Descripción</th>
+                            <th class="price-column">Precio</th>
+                            <th class="stock-column">Stock</th>
+                            <th class="actions-column">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="products-tbody"></tbody>
+                </table>
+            </div>
+
+            <!-- Agregar después de la tabla de productos -->
+            <div class="pagination">
+                <div class="pagination-info">
+                    <span>Mostrando <span id="showing-start">0</span>-<span id="showing-end">0</span> de <span id="total-items">0</span> productos</span>
+                </div>
+                <div class="pagination-controls">
+                    <select id="items-per-page" class="items-per-page">
+                        <option value="5">5 por página</option>
+                        <option value="10" selected>10 por página</option>
+                        <option value="25">25 por página</option>
+                        <option value="50">50 por página</option>
+                    </select>
+                    <div class="page-buttons">
+                        <button id="prev-page" class="btn btn-secondary" disabled>&lt; Anterior</button>
+                        <span id="current-page">Página 1</span>
+                        <button id="next-page" class="btn btn-secondary" disabled>Siguiente &gt;</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <script src="/js/components/EditableList.js"></script>
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Editar Producto</h2>
+                <button type="button" class="close-modal">&times;</button>
+            </div>
+            <form id="edit-form">
+                <input type="hidden" id="edit-id" name="id">
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label for="edit-name">Nombre</label>
+                        <input type="text" id="edit-name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-description">Descripción</label>
+                        <input type="text" id="edit-description" name="description" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-price">Precio</label>
+                        <input type="number" id="edit-price" name="price" step="0.01" min="0" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-stock">Stock</label>
+                        <input type="number" id="edit-stock" name="stock" min="0" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary close-modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="/js/validators.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
