--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,11 +11,11 @@
         <div id="auth-section">
             <div class="auth-card">
                 <div class="card-header">
-                    <h1>Tienda Supported</h1>
+                    <h1 class="main-title">Tienda Supported</h1>
                 </div>
                 
                 <div id="login-form">
-                    <h2>Iniciar Sesión</h2>
+                    <h2 class="form-title">Iniciar Sesión</h2>
                     <form id="login">
                         <div class="form-group">
                             <label for="username">Usuario</label>
@@ -25,10 +25,10 @@
                             <label for="password">Contraseña</label>
                             <input type="password" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Entrar</button>
+                        <button type="submit" class="btn btn-primary btn-block">Entrar</button>
                     </form>
-                    <p class="text-center">
-                        <a href="#" id="toggle-auth">Registrarse</a>
+                    <p class="text-center mt-4">
+                        <a href="#" id="toggle-auth" class="link-primary">Registrarse</a>
                     </p>
                 </div>
 
